[package]
name = "monkeynumber"
version = "0.1.0"
edition = "2021"
description = "Brute-force a Mersenne-Twister seed that reproduces a target word"
license = "MIT"
repository = "https://github.com/SalvatoreT/monkeynumber"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
